# fastapi_handson

./: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: main.py
src/entities/: property.py  user.py
src/impl/: property_respository.py  user_repository.py
src/routers/: property.py  user.py
src/use_cases/: property_repository.py  user_repository.py
